<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="movie_poster_description">Movie Poster</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_detail">Movie Detail</string>
    <string name="rate_now_desc">Rate this movie</string>
    <string name="movie_rating_desc">Movie Rating</string>
    <string name="movie_poster_desc">Movie Poster</string>

    <string name="movie_release_date_label">Release Date</string>
    <string name="movie_rating_label">Rated</string>
    <string name="movie_favorite_this_label">Favorite this</string>

    <string name="movie_details_initial_display">Tap on a movie</string>

    <string name="movie_review_listing_title">User Reviews</string>
    <string name="movie_trailer_listing_title">Movie Trailers</string>
    <string name="movie_detail_tap_required_message">
        Tap on a movie to display details here
    </string>
    <string name="play_trailer_content_description">Play Trailers</string>
    <string name="movie_sample_review">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip
    </string>
</resources>
