<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/movie_detail_banner"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">
        <TextView tools:text="This an Original"
            android:id="@+id/movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="top"
            android:textColor="@color/primary_light"
            android:textSize="22sp"
            android:fontFamily="sans-serif-condensed"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="60dp"
        android:background="@color/icons"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="50dp">
            <ImageView
                android:id="@+id/movie_detail_poster"
                android:layout_width="0dp"
                android:layout_height="340dp"
                android:layout_weight="2"
                android:scaleType = "fitCenter"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                tools:src="@drawable/poster_placeholder"
                android:contentDescription="@string/movie_poster_desc"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:orientation="vertical"
                android:paddingTop="24dp"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">
                <TextView
                    android:id="@+id/movie_detail_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="24sp"
                    android:text="@string/movie_release_date_label"
                    tools:text="Released"
                    android:textColor="@color/primary_text"
                    android:layout_marginBottom="4dp"/>
                <TextView
                    android:id="@+id/movie_detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    tools:text="2015-03-21"
                    android:layout_marginBottom="8dp"/>
                <TextView
                    android:id="@+id/movie_rating_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="24sp"
                    android:text="@string/movie_rating_label"
                    android:textColor="@color/primary_text"
                    tools:text="Rated"
                    android:layout_marginBottom="4dp"/>
                <TextView tools:text="Rating"
                    android:id="@+id/movie_detail_vote_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/secondary_text"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif-light"
                    android:drawableEnd="@drawable/rating"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <TextView tools:text="Favorite this"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondary_text"
                        android:text="@string/movie_favorite_this_label"
                        android:textSize="24sp"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"/>
                    <ImageButton
                        android:id="@+id/rate_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:elevation="2dp"
                        android:padding="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_star_off"
                        style="?android:attr/borderlessButtonStyle"
                        android:background="@drawable/rating_button_background"
                        android:contentDescription="@string/rate_now_desc"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/movie_detail_plot"
                    android:layout_width="match_parent"
                    android:paddingBottom="24dp"
                    android:paddingTop="24dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:lineSpacingExtra="5dp"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</FrameLayout>